--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<!-- Optionnel : Permet d'avoir une stabilité du serveur tomcat embarqué -->
 		<dependency>
@@ -60,6 +66,9 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.24</version>
 		</dependency>
+		
+		
+		
 	
 	</dependencies>
 	
