--- a/src/main/resources/Application.properties
+++ b/src/main/resources/Application.properties
@@ -1,6 +1,6 @@
 server.port=8181
 
-spring.datasource.url=jdbc:mysql://localhost:3306/twic
+spring.datasource.url=jdbc:mysql://localhost:3306/villes_france
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
